--- a/Compras.html
+++ b/Compras.html
@@ -117,7 +117,7 @@
         <div id="top-menu" class="buttons">
             <h3 id="page-title">Compras: Dashboard</h3>
         </div>
-        <div id="content">
+        <div id="content" class="content-mob">
             <div class="tarjeta">
                 <div class="card-title-group">
                     <h4>Req con planilla:&nbsp;<span id="countReqConPlanilla">n</span></h4>
@@ -293,7 +293,7 @@
                         </a><a class="list-group-item list-group-item-action deck-row" href="Compras/OCProveedores.html">
                             <div class="deck-title">
                                 <h5>Req: Nombre de req</h5>
-                                <div class="info-even-row max-height"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail oc-icon envio-cliente">
+                                <div class="info-even-row max-height deck-icon"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail oc-icon envio-cliente">
                                         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                         <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"></path>
                                         <path d="M3 7l9 6l9 -6"></path>
@@ -314,10 +314,12 @@
                                         <path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
                                         <path d="M5 17h-2v-4m-1 -8h11v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5"></path>
                                         <path d="M3 9l4 0"></path>
-                                    </svg></div>
+                                    </svg>
+                                </div>
                             </div>
                             <p class="p-semibold deck-info align-right">Contacto proveedor<br>Numero<br>Correo</p>
-                        </a><a class="list-group-item list-group-item-action deck-row" href="Compras/OCProveedores.html">
+                        </a>
+                        <a class="list-group-item list-group-item-action deck-row" href="Compras/OCProveedores.html">
                             <div class="deck-title">
                                 <h5>Req: Nombre de req</h5>
                                 <div class="info-even-row max-height"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail oc-icon envio-cliente">
@@ -344,7 +346,8 @@
                                     </svg></div>
                             </div>
                             <p class="p-semibold deck-info align-right">Contacto proveedor<br>Numero<br>Correo</p>
-                        </a><a class="list-group-item list-group-item-action deck-row" href="Compras/OCProveedores.html">
+                        </a>
+                        <a class="list-group-item list-group-item-action deck-row" href="Compras/OCProveedores.html">
                             <div class="deck-title">
                                 <h5>Req: Nombre de req</h5>
                                 <div class="info-even-row max-height"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-mail oc-icon envio-cliente">
@@ -371,7 +374,8 @@
                                     </svg></div>
                             </div>
                             <p class="p-semibold deck-info align-right">Contacto proveedor<br>Numero<br>Correo</p>
-                        </a></div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
